# wiki-search-alveo

./: .gitignore  .gitmodules  Dockerfile  README.md  XACC_buildscript.sh  XACC_runscript.sh  build.sh  conda_env.yml  qce-alveo01-build.md  run.sh
.github/: dependabot.yml
alveo/: .gitignore  Makefile  README.md  config.mk  sdaccel.ini
alveo/scripts/: package_kernel.tcl
alveo/sdx-2018.3/: Makefile  config.mk  qor.json  utils.mk
alveo/src/: alveo.cpp  alveo.hpp  ffi.cpp  ffi.h  hardware.cpp  hardware.hpp  host.cpp  kernel.xml  krnl_word_match_rtl.vhd  software.cpp  software.hpp  utils.cpp  utils.hpp  word_match.cpp  word_match.hpp  xbutil.cpp
alveo/vitis-2019.2/: .gitignore  Makefile  README.md  config.mk  qor.json  utils.mk
client/: .gitignore  package-lock.json  package.json
client/src/: App.vue  index.html  index.ts
data/: README.md  build.sbt
fletchgen/: .gitignore  Makefile  README.md  generate.py  schemas.py
hardware/: .gitignore  README.md  alveo.mmio.yaml  fletchgen.mmio.yaml  pages.as  result.as  run-vhdeps.sh  run-vhdmmio.sh  schemas.ipynb  stats.as  word_match_matcher.py
hardware/mmio-alveo/: alveo.mmio.yaml  mmio.gen.vhd  mmio_pkg.gen.vhd
hardware/mmio-fletchgen/: fletchgen.mmio.yaml  mmio.gen.vhd  mmio_pkg.gen.vhd
hardware/vhdl/: .gitignore  AxiTop.vhd  Mantle.vhd  Pages.vhd  Result.vhd  SimTop_tc.vhd  Stats.vhd  WordMatch_AxiSlaveMock.vhd  WordMatch_AxiTop.vhd  WordMatch_CmdGen.vhd  (+20 more)
optimize/: Makefile  README.md  main.cpp
server/: Cargo.toml  README.md
server/src/: main.rs
wrapper/: Cargo.toml  README.md  build.rs  wrapper.h
(+21 files in other folders)
