[package]
name = "server"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"
reqwest = "0.9"
wrapper = { path = "../wrapper" }
rust-crypto = "0.2"
